Add Hilary's twitter

--- a/content/post/2017-05-22-episode-1.md
+++ b/content/post/2017-05-22-episode-1.md
@@ -9,7 +9,7 @@ tags: [munging, time series]
 
 ## Background
 
-In the first episode of Analyst Mindset I (more or less on a whim) decided to look at the lengths of each of the episodes of Not So Standard Deviations, a data science podcast I do with Hilary Parker. 
+In the first episode of Analyst Mindset I (more or less on a whim) decided to look at the lengths of each of the episodes of Not So Standard Deviations, a data science podcast I do with [Hilary Parker](https://twitter.com/hspter). 
 
 ## Goal
 
